--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ru">
 <head>
     <title>AI-Прогноз Акций MOEX Бесплатно: SBER, GAZP 2025 | RussianStocks AI</title>
+    <meta name="google-site-verification" content="BFLpqY_ChqUhp2bC33TU9Cuibd-PAFa2csDp_F9OkUA" />
     <meta name="description" content="Бесплатный AI-прогноз цен акций MOEX на Transformer (EMA, MACD, RSI). SBER/GAZP на день. Премиум 500 руб/мес: уведомления, аналитика. Безопасно по ФЗ-39/152. Точные сигналы для трейдеров.">
     <meta name="keywords" content="прогноз акций MOEX бесплатно, AI-прогноз SBER GAZP 2025, нейросеть трейдинг бесплатно, прогноз цен акций Transformer, прогноз акций Сбер, анализ акций Газпром, AI индикаторы трейдинг MOEX">
     <meta property="og:title" content="RussianStocks AI: AI-прогноз цен акций MOEX | Бесплатно для SBER/GAZP">
@@ -212,4 +213,5 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" defer></script>
     <script>document.addEventListener('DOMContentLoaded',()=>{window.addEventListener('scroll',()=>{document.querySelector('.navbar').classList.toggle('scrolled',window.scrollY>50);});document.querySelectorAll('a[href^="#"]').forEach(a=>{a.addEventListener('click',e=>{e.preventDefault();const t=document.querySelector(a.getAttribute('href'));if(t)window.scrollTo({top:t.offsetTop-80,behavior:'smooth'});});});if(!localStorage.getItem('cookiesAccepted')){const banner=document.createElement('div');banner.className='cookie-banner';banner.setAttribute('role','dialog');banner.setAttribute('aria-live','polite');banner.innerHTML='<div class="container"><p>Мы используем файлы cookie для оптимизации работы сайта и повышения удобства пользователей в соответствии с ФЗ-152. <a href="privacy.html" rel="noopener">Подробнее</a></p><button class="btn btn-primary" id="acceptBtn">Принять</button></div>';document.body.appendChild(banner);const acceptBtn=banner.querySelector('#acceptBtn');acceptBtn.setAttribute('aria-label','Принять использование файлов cookie');acceptBtn.addEventListener('click',acceptCookies);setTimeout(()=>{banner.classList.add('show');},100);document.body.style.paddingBottom='80px';}function acceptCookies(){localStorage.setItem('cookiesAccepted','true');const banner=document.querySelector('.cookie-banner');if(banner){banner.style.transform='translateY(100%)';setTimeout(()=>{banner.remove();document.body.style.paddingBottom='0';},300);}}});</script>
 </body>
+
 </html>
